# Ferrofluid-Speaker

./: .gitignore  .gitmodules  Electromagnet Holder 100lb v8.f3z  Ferrofluid Bottle v4.f3d  Ferrofluid Speaker v15.f3z  README.md
Case/: Case Center v11.3mf  Case Left v11.3mf  Case Right v11.3mf  Case no POT v3.3mf  Case v11.3mf  Download_STP_649002013322_rev1.stp  Tilted Case Fame v21.3mf
Case/VISATON FR 8 WP 130814-igs-stp/: FR 8 WP 130814.stp
Circuits/Main Circuit/: Ferrofluid Speaker v17.f3z  Ferrofluid Speaker v22.fsch  Ferrofluid Speaker v27.fsch  Ferrofluid Speaker v29 BOM.numbers  Ferrofluid Speaker v36.fsch  SI4485DY-T1-GE3.STEP
Circuits/Main Circuit/B520C-13-F/: B520C-13-F.lbr  SMC_DIO.step
Circuits/Main Circuit/ESDA25P35-1U1M/: ESDA25P35-1U1M.lbr  QFN1610_STM.step
Circuits/Main Circuit/ESDA25W/: ESDA25W.lbr
Circuits/Main Circuit/ESP32-DEVKITC/: ESP32-DEVKITC-32D.lbr
Circuits/Main Circuit/GMR100HTCFAR100/: GMR100HTCFAR100.lbr
Circuits/Main Circuit/MSS1P3L-M3:89A/: DIODE_MSP3V3.step  MSS1P3L-M3-89A.lbr
Circuits/Main Circuit/NVJS4405NT1G/: NVJS4405NT1G.lbr  SOT-363-6_2P2X1P35_ONS.step
Code/ESP32/Ferrofluid-Speaker/main/: CMakeLists.txt  Ferrofluid_Speaker.cpp
ESP32/Ferrofluid-Speaker/: sdkconfig
Electromagnets/: EM150-12-222 v2.f3d  EM175GenericModel v2.f3d
Holders/One 100lb Holder/: Electromagnet Holder One 100lb v3.3mf  Electromagnet Holder One 100lb v3.f3z  Electromagnet Holder One 100lb v5.3mf  Electromagnet Holder One 100lb v5.f3z  Electromagnet Holder One 100lb v5_0.2mm_PLA_MK3SMMU2S_2h41m.gcode
(+26 files in other folders)
